--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+.container {
+    width: 90vw; /* 90% of the viewport width */
+    max-width: 90vw; /* Set a max width for the container */
+    margin: 0 auto;   /* Center the container */
+    padding: 20px;    /* Add some padding inside the container */
+    /*box-shadow: 0 2px 10px rgba(2, 53, 8, 0.762); /* Optional: add a shadow for depth */
+}
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f7f7f7;
@@ -41,4 +49,11 @@ h1, h2 {
 
 h1:hover, h2:hover {
     color: #2980b9;
+}
+
+.bar {
+    width: 70%; /* Width of the border */
+    height: 2px; /* Thickness of the border */
+    background-color: black; /* Border color */
+    margin: 10px auto 0; /* Center it horizontally with auto margins */
 }
