--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
     width: 90vw; /* 90% of the viewport width */
     max-width: 90vw; /* Set a max width for the container */
     margin: 0 auto;   /* Center the container */
-    padding: 20px;    /* Add some padding inside the container */
+    padding-left: 20vw; 
+    padding-right:20vw;  
+    padding-top: 5vh;
+    padding-bottom: 5vh; /* Add some padding inside the container */
     /*box-shadow: 0 2px 10px rgba(2, 53, 8, 0.762); /* Optional: add a shadow for depth */
 }
 
@@ -11,7 +14,6 @@ body {
     background-color: #f7f7f7;
     color: #333;
     margin: 0;
-    padding: 20px;
 }
 
 h1 {
@@ -31,7 +33,6 @@ h2 {
     margin-bottom: 15px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    border-bottom: 2px solid #2980b9;
     padding-bottom: 10px;
 }
 
@@ -39,21 +40,26 @@ h3 {
     font-size: 1.5rem;
     font-weight: normal;
     color: #34495e;
-    margin-left: 20px;
-    margin-bottom: 10px;
+    margin-left: 2%;
+    margin-bottom: 2%;
 }
 
 h1, h2 {
     transition: color 0.3s ease;
 }
 
-h1:hover, h2:hover {
+h1:hover, h2:hover,h3:hover {
     color: #2980b9;
+}
+h2:hover +.bar {
+    background-color: #2980b9; /* separate rule, otherwise h2's background changes too! */
 }
 
 .bar {
-    width: 70%; /* Width of the border */
-    height: 2px; /* Thickness of the border */
-    background-color: black; /* Border color */
-    margin: 10px auto 0; /* Center it horizontally with auto margins */
-}
+    width: 10%;
+    height: 3px;
+    background-color: #2c3e50;
+    margin-left: 1%; /* left align with a little hanging part */
+    transition: color 0.3s ease;
+    margin: 5px;
+}   
