--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     padding-bottom: 5vh; /* Add some padding inside the container */
     border: none;
     /*box-shadow: 0 2px 10px rgba(2, 53, 8, 0.762); /* Optional: add a shadow for depth */
+    align-items: center;
 }
 
 body {
@@ -15,6 +16,11 @@ body {
     background-color: #f7f7f7;
     color: #333;
     margin: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
 }
 
 h1 {
@@ -41,7 +47,6 @@ h3 {
     font-size: 1.5rem;
     font-weight: normal;
     color: #34495e;
-    margin-left: 2%;
     margin-bottom: 2%;
 }
 
@@ -66,11 +71,10 @@ p{
 }
 
 .bar {
-    width: 10%;
+    width: 100%;
     height: 3px;
     background-color: #2c3e50;
-    margin-left: 1%; /* left align with a little hanging part */
-    transition: color 0.3s ease;
+    /* margin-left: 1%; /* left align with a little hanging part */
     margin: 3vh;
 }   
 
@@ -81,11 +85,9 @@ p{
 }
 
 
-
-
 #gallery_image{
-    width: 40vw;
-    height: auto;
+    width: auto;
+    height: 70vh;
     margin: 2vh none 2vh none;
 }
 
