--- a/styles.css
+++ b/styles.css
@@ -71,11 +71,13 @@ p{
 }
 
 .bar {
-    width: 100%;
+    width: 10%;
     height: 3px;
     background-color: #2c3e50;
     /* margin-left: 1%; /* left align with a little hanging part */
     margin: 3vh;
+    display: flex;
+    justify-self: center;
 }   
 
 
@@ -87,13 +89,14 @@ p{
 
 #gallery_image_container{
     display: flex;
+    justify-content: center;
     align-items: center;
     position: relative;
-    width: fit-content;
-    width: auto;
     height: 70vh;
+    width: auto;
 
 }
+
 
 #gallery_image{
     height: 100%;
@@ -104,11 +107,11 @@ p{
 
 #gallery button  {
     height: 100%;
-    width: auto;
+    width: 5%;
 
     background: #19560481; 
     border: 1px solid rgba(255, 255, 255, 0.3); /* Soft border */
-    color: #1e730224; 
+    color: #ffffff; 
     backdrop-filter: blur(8px); /* Glassy blur effect */
     transition: all 0.3s ease; 
   }
