--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
     border: none;
     /*box-shadow: 0 2px 10px rgba(2, 53, 8, 0.762); /* Optional: add a shadow for depth */
     align-items: center;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
 }
 
 body {
@@ -17,10 +20,8 @@ body {
     color: #333;
     margin: none;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    text-align: center;
+ 
+
 }
 
 h1 {
@@ -83,22 +84,23 @@ p{
 
 .toggles{
     display:none;
-    transition: 3s ease;
+    justify-items: center;
 }
 
 
-#gallery_image_container{
- 
-    position: relative;
+#gallery{
+    display: flex;
     height: 70vh;
     width: 30vw ;
+}
+#gallery_image_container{
+    height: 100%;
+    width: auto ;
     overflow: hidden;
 }
 
-
 #gallery_image{
     transition: transform 1s ease;
-    position: absolute;
     height: 100%;
     width: auto;
 }
@@ -128,8 +130,10 @@ p{
 #gallery button.right{
   border-top-right-radius: 8px; 
   border-bottom-right-radius: 8px; 
+  right:0;
   }
 #gallery button.left{
   border-top-left-radius: 8px; 
   border-bottom-left-radius: 8px; 
+  left: 0;
  }
