--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ p{
 .section{
     width:100%;
     justify-items: center;
+    justify-content: center;
 }
 
 .bar {
@@ -94,20 +95,21 @@ p{
 
 
 #gallery{
-    display: flex;
+    display: grid;
     height: 70vh;
-    width: 30vw ;
+    width: 70vw ;
 }
 #gallery_image_container{
-    height: 100%;
-    width: auto ;
     overflow: hidden;
+    position:relative;
+    justify-self:center;
 }
 
 #gallery_image{
     transition: transform 1s ease;
-    height: 100%;
-    width: auto;
+    object-position: center;
+    width:100%;
+    height:100%;
 }
 .slide-left {
     transform: translateX(-100%); /* Slide to the left */
@@ -118,9 +120,9 @@ p{
 
 
 #gallery button  {
-    height: 100%;
-    width: 5%;
-    position: relative;
+    height: 70vh;
+    width: 2.5%;
+    position: absolute;
     background: #19560481; 
     border: 1px solid rgba(255, 255, 255, 0.3); /* Soft border */
     color: #ffffff; 
@@ -135,10 +137,10 @@ p{
 #gallery button.right{
   border-top-right-radius: 8px; 
   border-bottom-right-radius: 8px; 
-  right:0;
+  right:20vw;
   }
 #gallery button.left{
   border-top-left-radius: 8px; 
   border-bottom-left-radius: 8px; 
-  left: 0;
+  left: 20vw;
  }
