--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ p{
 }
 
 
-#gallery{
+.gallery{
     display: grid;
     height: 70vh;
     width: 70vw ;
@@ -111,9 +111,9 @@ p{
     object-position: center;
     max-width: 100%;
     max-height: 100%;
+
 }
 .new_gallery_image{
-    object-position: center;
     max-width: 100%;
     max-height: 100%;
 }
@@ -129,7 +129,8 @@ p{
 }
 
 
-#gallery button  {
+
+.gallery button  {
     height: 70vh;
     width: 2.5%;
     position: absolute;
@@ -141,13 +142,12 @@ p{
   }
   
   
-#gallery button.right{
+.gallery button.right{
   border-top-right-radius: 8px; 
   border-bottom-right-radius: 8px; 
-  right:20vw;
+  justify-self: right;
   }
-#gallery button.left{
+.gallery button.left{
   border-top-left-radius: 8px; 
   border-bottom-left-radius: 8px; 
-  left: 20vw;
  }
