--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,21 @@ p{
 }
 #gallery_image_container{
     overflow: hidden;
-    position:relative;
+    position:block;
+    justify-self:center;
+    height: 70vh;
+    width: 70vw ;
+}
+#gallery_image_container_next{
+    overflow: hidden;
+    position:block;
+    justify-self:center;
+    height: 70vh;
+    width: 70vw ;
+}
+#gallery_image_container_prev{
+    overflow: hidden;
+    position:block;
     justify-self:center;
     height: 70vh;
     width: 70vw ;
@@ -111,9 +125,16 @@ p{
     object-position: center;
     max-width: 100%;
     max-height: 100%;
-
 }
-.new_gallery_image{
+
+#gallery_image_next{
+    object-position: center;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#gallery_image_prev{
+    object-position: center;
     max-width: 100%;
     max-height: 100%;
 }
@@ -138,7 +159,7 @@ p{
     border: 1px solid rgba(255, 255, 255, 0.3); /* Soft border */
     color: #ffffff; 
     backdrop-filter: blur(8px); 
-    z-index: 1;
+    z-index: 2;
   }
   
   
