Fixed the right button. turns out we were seeing item -1, instead of item 0, so I centred the grid

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,8 @@ p{
     overflow: hidden;
     background:  rgba(192, 191, 191, 0.205);
     border-radius: 8px;
+    justify-content: center; /* Center text horizontally */
+    align-items: center; /* Center text vertically */
 }
 #gallery_image_container, #gallery_image_container_prev, #gallery_image_container_next{
     height: 70vh;
