--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 #container {
-    width: 90vw; /* 90% of the viewport width */
-    max-width: 90vw; /* Set a max width for the container */
+    max-width: 100vw; /* Set a max width for the container */
     margin: none;
     padding-left: 5vw; 
     padding-right:5vw;  
-    padding-top: 5vh;
     padding-bottom: 5vh; /* Add some padding inside the container */
     border: none;
     /*box-shadow: 0 2px 10px rgba(2, 53, 8, 0.762); /* Optional: add a shadow for depth */
@@ -23,13 +21,14 @@ body {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     color: #2c3e50;
     margin-bottom: 15px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    padding-bottom: 25px;
+    padding-top: 40px;
+    text-align: center;
 }
 
 h2 {
