--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 #container {
-    max-width: 100vw; /* Set a max width for the container */
-    padding-top: 7.5vh;
+    max-width: 90vw; /* Set a max width for the container */
+    max-height: 90vw;
+    padding-top: 10vh;
     padding-left: 5vw; 
     padding-right:5vw;  
-    padding-bottom: 5vh; /* Add some padding inside the container */
     border: none;
     /*box-shadow: 0 2px 10px rgba(2, 53, 8, 0.762); /* Optional: add a shadow for depth */
     align-items: center;
@@ -96,7 +96,7 @@ p{
     top: 0;
     left: 0;
     width: 100%;
-    height: 7.5vh;
+    height: 10vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -108,7 +108,7 @@ p{
     background-color: rgba(0, 51, 0, 0.4); /* Translucent dark green */
     border: 1px solid rgba(0, 51, 0, 0.8); /* Dark green thin border */
     text-align: center;
-    height:7.5vh;
+    height:10vh;
     font-size: clamp(0.8rem, 1.5vw, 1.2rem); /* Responsive font size */
     text-decoration: none;
     transition: all 0.3s ease; /* Smooth hover transition */
@@ -126,8 +126,8 @@ p{
 .gallery{
     display: grid;
     grid-template-columns: auto auto auto;
-    height: 70vh;
-    width: 70vw ;
+    height: 90vh;
+    width: 90vw ;
 }
 .gallery-images{
     display: grid;
@@ -139,8 +139,8 @@ p{
     align-items: center; /* Center text vertically */
 }
 #gallery_image_container, #gallery_image_container_prev, #gallery_image_container_next{
-    height: 70vh;
-    width: 70vw ;
+    height: 90vh;
+    width: 90vw ;
 }
 #gallery_image, #gallery_image_next, #gallery_image_prev {
     max-width: 100%;
@@ -174,7 +174,7 @@ p{
 }
 
 .gallery button  {
-    height: 70vh;
+    height: 90vh;
     width: 2.5%;
     position: absolute;
     background: #19560481; 
