--- a/styles.css
+++ b/styles.css
@@ -165,27 +165,46 @@ p{
 
 .gallery{
     display: grid;
-    grid-template-columns: auto auto auto;
-    height: 100%;
+    grid-template-columns: 5vw auto 5vw;
+    height: 90%;
     width: 100%;
     padding-bottom: 2vh;
 }
 .gallery-images{
+    position:flex;
+    grid-column: 2;
+    height: 100%;
+    width: 100%;
+
+
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 100% 100% 100%;
     overflow: hidden;
     background:  rgba(192, 191, 191, 0.205);
-    border-radius: 8px;
-    justify-content: center; /* Center text horizontally */
-    align-items: center; /* Center text vertically */
+    justify-content: center;
+    /*border-radius: 8px;*/ 
+
 }
 #gallery_image_container, #gallery_image_container_prev, #gallery_image_container_next{
     height: 100%;
     width: 100%;
 }
+
+#gallery_image_container_prev{
+    grid-column: 1;
+}
+
+#gallery_image_container{
+    grid-column: 2;
+}
+#gallery_image_container_next{
+    grid-column: 3;
+}
+
 #gallery_image, #gallery_image_next, #gallery_image_prev {
+    position:relative;
+    max-height:100%;
     max-width: 100%;
-    max-height: 100%;
 }
 
 
@@ -215,9 +234,9 @@ p{
 }
 
 .gallery button  {
-    height: 90vh;
-    width: 2.5%;
     position: absolute;
+    height: 100%;
+    width: 10%;
     background: #19560481; 
     border: 1px solid rgba(255, 255, 255, 0.3); /* Soft border */
     color: #ffffff; 
@@ -228,10 +247,10 @@ p{
 .gallery button.right{
   border-top-right-radius: 8px; 
   border-bottom-right-radius: 8px; 
-  justify-self: right;
+  grid-column:3;
   }
 .gallery button.left{
   border-top-left-radius: 8px; 
   border-bottom-left-radius: 8px; 
-  justify-self: left;
+  grid-column:1;
  }
