--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body, html {
     color: #333;
     
     display: grid;
-    grid-template-rows: 10vh 1fr; /* 15% for the top bar, remaining for main content */
+    grid-template-rows: 10vh 90vh; /* 15% for the top bar, remaining for main content */
     height: 100vh; /* Full viewport height */
     /* Global
     display: flex;
@@ -27,6 +27,7 @@ body, html {
     grid-row: 2;
     position:relative;
     width:100%; 
+    height:100%;
     padding-top: 2vh;
     padding-left: 5vw; 
     padding-right:5vw;  
@@ -186,7 +187,7 @@ p{
 
 }
 #gallery_image_container, #gallery_image_container_prev, #gallery_image_container_next{
-    height: 100%;
+    height: 90%;
     width: 100%;
 }
 
@@ -202,9 +203,8 @@ p{
 }
 
 #gallery_image, #gallery_image_next, #gallery_image_prev {
-    position:relative;
-    max-height:100%;
-    max-width: 100%;
+    height:100%;
+    width: 100%;
 }
 
 
@@ -233,16 +233,7 @@ p{
     }
 }
 
-.gallery button  {
-    position: absolute;
-    height: 100%;
-    width: 10%;
-    background: #19560481; 
-    border: 1px solid rgba(255, 255, 255, 0.3); /* Soft border */
-    color: #ffffff; 
-    backdrop-filter: blur(8px); 
-    z-index: 1;
-  }
+
   
 .gallery button.right{
   border-top-right-radius: 8px; 
@@ -254,3 +245,15 @@ p{
   border-bottom-left-radius: 8px; 
   grid-column:1;
  }
+
+ .buttoneft  {
+    position: absolute;
+    display: flex;
+    height: 100%;
+    width: 10%;
+    background: #19560481; 
+    border: 1px solid rgba(255, 255, 255, 0.3); /* Soft border */
+    color: #ffffff; 
+    backdrop-filter: blur(8px); 
+    z-index: 1;
+  }
