--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ p{
 .gallery{
     display: grid;
     grid-template-columns: 5vw auto 5vw;
-    height: 90%;
+    height: 100%;
     width: 100%;
     padding-bottom: 2vh;
 }
@@ -182,12 +182,12 @@ p{
     grid-template-columns: 100% 100% 100%;
     overflow: hidden;
     background:  rgba(192, 191, 191, 0.205);
-    justify-content: center;
+    justify-content: center; /* start on missle picture*/
     /*border-radius: 8px;*/ 
 
 }
 #gallery_image_container, #gallery_image_container_prev, #gallery_image_container_next{
-    height: 90%;
+    height: 100%;
     width: 100%;
 }
 
@@ -203,8 +203,8 @@ p{
 }
 
 #gallery_image, #gallery_image_next, #gallery_image_prev {
-    height:100%;
-    width: 100%;
+    max-height:100%;
+    max-width: 100%;
 }
 
 
