--- a/styles.css
+++ b/styles.css
@@ -171,11 +171,7 @@ p{
     width: 100%;
 }
 .gallery-images{
-    position:relative;
     grid-column: 2;
-    height: 100%;
-    width: 100%;
-
 
     display: grid;
     grid-template-columns: 100% 100% 100%;
@@ -188,6 +184,9 @@ p{
 
 }
 #gallery_image_container, #gallery_image_container_prev, #gallery_image_container_next{
+    justify-content: center; 
+    align-content: center;
+    overflow: hidden;/* cropping helps liminate jump at end*/
     height: 100%;
     width: 100%;
 }
@@ -204,8 +203,8 @@ p{
 }
 
 #gallery_image, #gallery_image_next, #gallery_image_prev {
-    max-height:100%;
-    max-width: 100%;
+    max-height:100vh;
+    max-width: 100vw;
 }
 
 
