--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,12 @@ p{
         transform: translateX(100%); /* End position */
     }
 }
-
+.gallery button  {
+    background:  rgba(0, 51, 0, 0.2);
+    border: 1px solid  rgba(0, 51, 0, 0.1);
+    color: #ffffff; 
+    backdrop-filter: blur(8px); 
+  }
 
   
 .gallery button.right{
@@ -250,14 +255,4 @@ p{
   grid-column:1;
  }
 
- .buttoneft  {
-    position: absolute;
-    display: flex;
-    height: 100%;
-    width: 10%;
-    background: #19560481; 
-    border: 1px solid rgba(255, 255, 255, 0.3); /* Soft border */
-    color: #ffffff; 
-    backdrop-filter: blur(8px); 
-    z-index: 1;
-  }
+ 
