--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body, html {
 .header{
     grid-row: 1;
     position:relative;
-    padding-bottom: 2vh;
 }
 
 #container {
@@ -28,7 +27,6 @@ body, html {
     position:relative;
     width:100%; 
     height:100%;
-    padding-top: 2vh;
     border: none;
     text-align: center;
     justify-content: center;
@@ -285,7 +283,7 @@ p{
  
 
  @media (max-width: 768px) and (orientation: landscape) {
-    .header {
+    .hide-on-mobile {
         display: none; /* Hides the div on mobile portrait */
     }
 }
