--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body, html {
 .header{
     grid-row: 1;
     position:fixed;
-    z-index: 2;
+    z-index:2;
 }
 /* Navbar container styling */
 .navbar {   
@@ -90,6 +90,7 @@ body, html {
     justify-items: center;
     align-content: top;
     overflow-y: scroll;/*Always have scroll so it doesn't spoint front page */
+    scroll-padding-top: 10vh; /* Ensures consistent behavior on scroll */
 }
 
 
@@ -104,7 +105,6 @@ h1 {
     font-weight: bold;
     color: #2c3e50;
     margin-bottom: 15px;
-    text-transform: uppercase;
     letter-spacing: 1px;
     padding-top: 40px;
     text-align: center;
@@ -115,7 +115,6 @@ h2 {
     font-weight: bold;
     color: #2c3e50;
     margin-bottom: 15px;
-    text-transform: uppercase;
     letter-spacing: 1px;
     padding-bottom: 10px;
 
@@ -143,7 +142,6 @@ p{
     font-size: 1rem;
     color: pink;
     font-weight: normal;
-    text-transform: lowercase;
     letter-spacing: none;
     padding-bottom: none;
 }
