--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body, html {
     display: grid;
     grid-template-rows: 10vh 90vh; 
     height: 100vh; /* Full viewport height */
+    overflow: hidden;
     /* Global
     display: flex;
     justify-content: center;
