--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body, html {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Andale Mono', monospace;
     color: #333;
     
     display: grid;
