--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,9 @@ p{
 .toggles{
     display:none;
     height: auto;
+    overflow: hidden;
+    max-height:0;
+    transition: max-height 0.4s ease-out;
 }
 
 .hero {
