--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body, html {
     color: #333;
     
     display: grid;
-    grid-template-rows: auto 1fr; 
+    grid-template-rows: 8vh 1fr; 
     height: 100vh; /* Full viewport height */
     overflow: hidden;
     /* Global
@@ -30,7 +30,7 @@ body, html {
     display: flex; /* keeps buttons in middle?*/
     left: 5%;
     width: 90%;
-    height: 10vh;
+    height: 8vh;
     align-items: center;
     box-sizing: border-box;
     z-index: 1;
@@ -42,18 +42,16 @@ body, html {
     position: absolute;
     left: 0;
     width: 100%;
-    height: 5px; /* Thin line height */
+    height: 2px; /* Thin line height */
     background-color: #4E7A51; /* Light, semi-transparent color */
 }
 
 .navbar:before {
     top: 1vh; /* Position top bar */
-    grid-row: 1;
 }
 
 .navbar:after {
     bottom: 1vh; /* Position bottom bar */
-    grid-row: 3;
 }
 
 /* Button styling */
@@ -83,14 +81,14 @@ body, html {
 #container {
     grid-row: 2;
     position:relative;
-    height: calc(100% - 10vh); /* Explicit height adjustment for the header */
+    height: calc(100% - 8vh); /* Explicit height adjustment for the header */
     border: none;
     text-align: center;
     justify-content: center;
     justify-items: center;
     align-content: top;
-    overflow-y: scroll;/*Always have scroll so it doesn't spoint front page */
-    scroll-padding-top: 10vh; /* Ensures consistent behavior on scroll */
+    overflow-y: scroll;/*Always have scroll so it doesn't spoil front page */
+    scroll-padding-top: 8vh; /* Ensures scroll top is bottom of header*/
 }
 
 
@@ -315,10 +313,11 @@ p{
     }
 }
 .gallery button  {
-    background:  rgba(0, 51, 0, 0.2);
-    border: 1px solid  rgba(0, 51, 0, 0.1);
-    color: #ffffff; 
-    backdrop-filter: blur(8px); 
+    background:  rgba(27, 92, 27, 0.349);
+    border: none;
+    backdrop-filter: blur(80px); 
+    font-size: 1.2rem;
+    color: darkgreen;
   }
 
   
