--- a/styles.css
+++ b/styles.css
@@ -338,9 +338,13 @@ p{
 
  
 
- @media (max-width: 768px) and (orientation: landscape) {
+ @media (max-width: 1400px) and (orientation: landscape) {
     .hide-on-mobile {
         display: none; /* Hides the div on mobile portrait */
         height:none;
     }
+    .max-on-mobile {
+        height: 100vh;
+    }
+
 }
